--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,26 +1,24 @@
-<!-- Fixed navbar -->
-<nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-        aria-controls="navbar">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="{{ site.url }}">{{ site.title }}</a>
-    </div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="{{ site.url }}">{{ site.title }}</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-    <div id="navbar" class="navbar-collapse collapse">
-      <ul class="nav navbar-nav navbar-right">
-        {% for link in site.nav-links %}
-        <li>
-          <a href="{{ site.baseurl }}/{{ link[1] }}">{{ link[0] }}</a>
-        </li>
-        {% endfor %}
-      </ul>
-    </div>
-    <!--/.nav-collapse -->
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      {% for link in site.nav-links %}
+      <li class="nav-item">
+        <a class="nav-link" href="{{ site.baseurl }}/{{ link[1] }}">{{ link[0] }}</a>
+      </li>
+      {% endfor %}
+    </ul>
+    <form class="form-inline my-2 my-lg-0" method="post" action="https://startpage.com/do/search">
+      <input class="form-control mr-sm-2" type="text" name="query" placeholder="Suche" aria-label="Suche">
+      <input type="hidden" name="linkback_url" value="https://coinium.ch">
+      <input type="hidden" name="frm" value="sb">
+      <input type="hidden" name="cmd" value="process_search">
+      <input type="hidden" name="language" value="deutsch">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Suche</button>
+    </form>
   </div>
 </nav>
