--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 <body>
     {% include nav.html %}
 
-    <div class="container">
+    <div class="container-fluid">
         {{ content }}
     </div>
 
