first design improvements

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
-<footer class="footer">
-  <div class="container footerBox">
+<footer>
+  <div class="container">
     <p class="copyright text-muted">
       Copyright&nbsp;&copy;&nbsp; {{ site.time | date: '%Y' }} 
       {% if site.pretty-url %} &nbsp;&bull;&nbsp;
