--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,1 +1,36 @@
-@import 'bootstrap';
+@import 'bootstrap_custom';
+
+h1, h2 {
+  margin-top: 10px
+}
+
+h3, h4, h5 {
+  margin-top: 5px;
+}
+
+.container,
+.container-fluid {
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
+
+.panel {
+  margin: 10px 0;
+}
+
+.posts-list {
+  margin-top: 10px;
+
+  article {
+    margin: 10px 0;
+
+    .readMoreLink {
+      display: block;
+      text-align: right;
+    }
+  }
+}
+
+footer {
+  background-color: #f9f9f9;
+}
