converted currencies to a collection

--- a/_includes/wiki_nav.html
+++ b/_includes/wiki_nav.html
@@ -1,6 +1,12 @@
-<h4>Inhalt</h4>
+<div class="card">
+    <div class="card-body">
+        <h4 class="card-title">Inhalt</h4>
+        <p class="card-text">
+        <ul>
+            <li><a href="/wiki">Home</a></li>
+            <li><a href="/wiki/waehrungen.html">Währungen</a></li>
+        </ul>
+        </p>
+    </div>
+</div>
 
-<ul>
-    <li><a href="/wiki">Home</a></li>
-    <li><a href="/wiki/waehrungen">Währungen</a></li>
-</ul>
