--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
-
-{% include head.html %}
-
+<html lang="de">
+<head>
+    {% include head.html %}
+</head>
 <body>
     {% include nav.html %}
 
