--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,30 +5,25 @@ comments: true
 
 <div class="row">
     <div class="col-md-8">
-        <div class="panel panel-default">
-            <div class="panel-heading">
-                <h1 class="text-primary">{{ page.title }}</h1>
-                <span class="text-muted"><small>Erstellt am {{ page.date | date: "%d.%m.%Y" }} von {{ page.author }}.</small></span>
-            </div>
-            <div class="panel-body">
-                {{ content }}
-            </div>
+        <article>
+            <h1>{{ page.title }}</h1>
+            <span class="text-muted"><small>Erstellt am {{ page.date | date: "%d.%m.%Y" }} von {{ page.author }}.</small></span>
 
-            <div class="panel-footer">
-                <ul class="pager blog-pager">
-                    {% if page.previous.url %}
-                    <li class="previous">
-                        <a href="{{ page.previous.url | prepend: site.baseurl | replace: '//', '/' }}" data-toggle="tooltip" data-placement="top"
-                        title="{{page.previous.title}}">&larr; Vorheriger Beitrag</a>
-                    </li>
-                    {% endif %} {% if page.next.url %}
-                    <li class="next">
-                        <a href="{{ page.next.url | prepend: site.baseurl | replace: '//', '/' }}" data-toggle="tooltip" data-placement="top" title="{{page.next.title}}">Nächster Beitrag &rarr;</a>
-                    </li>
-                    {% endif %}
-                </ul>
-            </div>
-        </div>
+            {{ content }}
+
+            <ul class="pager blog-pager">
+                {% if page.previous.url %}
+                <li class="previous">
+                    <a href="{{ page.previous.url | prepend: site.baseurl | replace: '//', '/' }}" data-toggle="tooltip" data-placement="top"
+                       title="{{page.previous.title}}">&larr; Vorheriger Beitrag</a>
+                </li>
+                {% endif %} {% if page.next.url %}
+                <li class="next">
+                    <a href="{{ page.next.url | prepend: site.baseurl | replace: '//', '/' }}" data-toggle="tooltip" data-placement="top" title="{{page.next.title}}">Nächster Beitrag &rarr;</a>
+                </li>
+                {% endif %}
+            </ul>
+        </article>
 
         {% if page.comments %}
         <div class="panel panel-default">
