updated pages and only one ci-script

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -12,13 +12,13 @@
       </li>
       {% endfor %}
     </ul>
-    <form class="form-inline my-2 my-lg-0" method="post" action="https://startpage.com/do/search">
+    <!--form class="form-inline my-2 my-lg-0" method="post" action="https://startpage.com/do/search">
       <input class="form-control mr-sm-2" type="text" name="query" placeholder="Suche" aria-label="Suche">
       <input type="hidden" name="linkback_url" value="https://coinium.ch">
       <input type="hidden" name="frm" value="sb">
       <input type="hidden" name="cmd" value="process_search">
       <input type="hidden" name="language" value="deutsch">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Suche</button>
-    </form>
+    </form-->
   </div>
 </nav>
