--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
 <meta name="keywords" content="{% if page.keywords %}{{ page.keywords }}{% else %}{{ site.keywords }}{% endif %}">
 
 <link rel="icon" href="{{ site.baseurl }}/assets/img/favicon.ico">
-<title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
+<title>{% if page.title %}{{ page.title }} :: {% endif %}Coinium</title>
 
 <link rel="alternate" type="application/rss+xml" title="{{ site.title }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
 
