made ready for getting online

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,6 +5,7 @@
       {% if site.pretty-url %} &nbsp;&bull;&nbsp;
         <a href="{{ site.url }}">{{ site.pretty-url }}</a> 
       {% endif %}
+      &bull;&nbsp;made with love in switzerland.
     </p>
   </div>
 </footer>
