--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <footer>
   <div class="container">
     <p class="copyright text-muted">
-      Copyright&nbsp;&copy;&nbsp; {{ site.time | date: '%Y' }} 
-      {% if site.pretty-url %} &nbsp;&bull;&nbsp;
+      <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/deed.de"><img alt="Creative Commons Lizenzvertrag" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a>
+      {% if site.pretty-url %} &bull;
         <a href="{{ site.url }}">{{ site.pretty-url }}</a> 
       {% endif %}
       &bull;&nbsp;made with love in switzerland.
