added font-awesome, added twitter integration

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -11,3 +11,4 @@
     ga('send', 'pageview');
 </script>
 {% endif %}
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
