--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,9 @@
       {% if site.pretty-url %} &bull;
         <a href="{{ site.url }}">{{ site.pretty-url }}</a> 
       {% endif %}
-      &bull;&nbsp;made with love in switzerland.
+      &bull; <a href="https://twitter.com/coiniumCH" rel="nofollow"><i class="fa fa-twitter" aria-hidden="true"></i> Twitter</a>
+      &bull; <a href="https://github.com/coiniumCH/coinium" rel="nofollow"><i class="fa fa-github" aria-hidden="true"></i> Github</a>
+      &bull; made with love in switzerland.
     </p>
   </div>
 </footer>
