--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
 <meta name="author" content="{{ site.profile.name }}" />
 <meta name="keywords" content="{% if page.keywords %}{{ page.keywords }}{% else %}{{ site.keywords }}{% endif %}">
 
-<link rel="icon" href="{{ site.baseurl }}/assets/img/favicon.ico">
+<link rel="icon" href="{{ site.baseurl }}/img/favicon.ico">
 <title>{% if page.title %}{{ page.title }} :: {% endif %}Coinium</title>
 
 <link rel="alternate" type="application/rss+xml" title="{{ site.title }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
