--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,8 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="{{ site.url }}">{{ site.title }}</a>
+  <a class="navbar-brand" href="{{ site.url }}">
+    <img src="{{ site.baseurl }}/img/android-chrome-192x192.png" width="30" height="30" class="d-inline-block align-top" alt="">
+    {{ site.title }}
+  </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
