--- a/_layouts/waehrung.html
+++ b/_layouts/waehrung.html
@@ -14,6 +14,9 @@ layout: wiki
                     <p>
                         <strong>Symbol:</strong> {{ page.symbol }}
                     </p>
+                    <p>
+                        <strong>Preis:</strong> <span class="cointicker" data-id="{{ page.cmc-id }}"></span> USD
+                    </p>
                 </p>
             </div>
         </div>
