--- a/_layouts/waehrung.html
+++ b/_layouts/waehrung.html
@@ -15,9 +15,9 @@ layout: wiki
                         <strong>Symbol:</strong> {{ page.symbol }}
                     </p>
                     <p>
-                        <strong>Preis:</strong> <span class="cointicker" data-id="{{ page.cmc-id }}">???</span> USD<br>
-                        <strong>Preis:</strong> <span class="cointicker" data-id="{{ page.cmc-id }}" data-convert="EUR">???</span> EUR<br>
-                        <strong>Preis:</strong> <span class="cointicker" data-id="{{ page.cmc-id }}" data-convert="CHF">???</span> CHF
+                        <strong>Preis USD:</strong> <span class="cointicker" data-id="{{ page.cmc-id }}">???</span><br>
+                        <strong>Preis EUR:</strong> <span class="cointicker" data-id="{{ page.cmc-id }}" data-convert="EUR">???</span><br>
+                        <strong>Preis CHF:</strong> <span class="cointicker" data-id="{{ page.cmc-id }}" data-convert="CHF">???</span>
                     </p>
                 </p>
             </div>
