--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,7 @@
 <meta name="application-name" content="Coinium">
 
 <!-- RSS -->
-<link rel="alternate" type="application/rss+xml" title="{{ site.title }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
+<link rel="alternate" type="application/rss+xml" title="{{ site.title }} - {{ site.description }}" href="{{ site.baseurl }}/atom.xml" />
 
 <!-- Bootstrap core CSS -->
 <link href="{{ site.baseurl }}/assets/css/styles.css" rel="stylesheet">
