--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -15,13 +15,8 @@
       </li>
       {% endfor %}
     </ul>
-    <!--form class="form-inline my-2 my-lg-0" method="post" action="https://startpage.com/do/search">
-      <input class="form-control mr-sm-2" type="text" name="query" placeholder="Suche" aria-label="Suche">
-      <input type="hidden" name="linkback_url" value="https://coinium.ch">
-      <input type="hidden" name="frm" value="sb">
-      <input type="hidden" name="cmd" value="process_search">
-      <input type="hidden" name="language" value="deutsch">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Suche</button>
-    </form-->
+    <form class="form-inline my-2 my-lg-0">
+      <input type="text" class="form-control mr-sm-2 algolia__input js-algolia__input" autocomplete="off" name="query" placeholder="Seite durchsuchen" />
+    </form>
   </div>
 </nav>
