--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,3 +1,11 @@
+<script>
+    window.ALGOLIA_CONFIG = {
+        'applicationId': '{{ site.algolia.application_id }}',
+        'indexName': '{{ site.algolia.index_name }}',
+        'apiKey': '{{ site.algolia.read_only_api_key }}',
+        'baseurl': '{{ site.baseurl }}'
+    }
+</script>
 <script src="{{ site.baseurl }}/assets/js/app.min.js"></script>
 {% if site.url == "https://coinium.ch" %}
 <script>
