--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -15,8 +15,9 @@
       </li>
       {% endfor %}
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input type="text" class="form-control mr-sm-2 algolia__input js-algolia__input" autocomplete="off" name="query" placeholder="Seite durchsuchen" />
+    <form class="js-algolia__form form-inline my-2 my-lg-0" method="get" action="{{ site.baseurl }}/suche">
+      <input type="text" class="form-control mr-sm-2 algolia__input js-algolia__input" autocomplete="off" name="query" placeholder="Suchbegriff eingeben..." />
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Suchen</button>
     </form>
   </div>
 </nav>
