--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,6 +7,7 @@
       {% endif %}
       &bull; <a href="https://twitter.com/coiniumCH" rel="nofollow"><i class="fa fa-twitter" aria-hidden="true"></i> Twitter</a>
       &bull; <a href="https://github.com/coiniumCH/coinium" rel="nofollow"><i class="fa fa-github" aria-hidden="true"></i> Github</a>
+      &bull; <a href="/about/#disclaimer-haftung">Disclaimer</a> 
       &bull; made with love in switzerland.
     </p>
   </div>
