--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,10 +16,10 @@
 <link rel="alternate" type="application/rss+xml" title="{{ site.title }} - {{ site.description }}" href="{{ site.baseurl }}/atom.xml" />
 
 <!-- Bootstrap core CSS -->
-<link href="{{ site.baseurl }}/assets/css/styles.css" rel="stylesheet">
+<link href="{{ site.baseurl }}/assets/css/styles.css?{{ site.data['hash'] }}" rel="stylesheet">
 
 <!-- Icons -->
-<link rel="shortcut icon" href="{{ site.baseurl }}/img/favicon.ico">
+<link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico">
 <link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/img/apple-touch-icon.png">
 <link rel="mask-icon" href="{{ site.baseurl }}/img/safari-pinned-tab.svg" color="#cf8516">
 <link rel="manifest" href="{{ site.baseurl }}/img/manifest.json">
