--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,8 +21,11 @@
 <!-- Icons -->
 <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico">
 <link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/img/apple-touch-icon.png">
-<link rel="mask-icon" href="{{ site.baseurl }}/img/safari-pinned-tab.svg" color="#cf8516">
+<link rel="mask-icon" href="{{ site.baseurl }}/img/safari-pinned-tab.svg" color="#d9b600">
 <link rel="manifest" href="{{ site.baseurl }}/img/manifest.json">
+<link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/img/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/img/favicon-16x16.png">
+<meta name="theme-color" content="#ffffff">
 
 <!-- Facebook OpenGraph tags -->
 <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" />
