tutorial electrum wallet

--- a/_includes/wiki_nav.html
+++ b/_includes/wiki_nav.html
@@ -5,6 +5,7 @@
         <ul>
             <li><a href="/wiki">Home</a></li>
             <li><a href="/wiki/waehrungen.html">Währungen</a></li>
+            <li><a href="/wiki/tutorials.html">Anleitungen</a></li>
             <li><a href="/wiki/glossar.html">Glossar</a></li>
         </ul>
         </p>
