rearranged wiki/blog

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -10,10 +10,10 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li>
-        <a class="nav-link" href="{{ site.baseurl }}/"><i class="fa fa-home" aria-hidden="true"></i> Home</a>
+        <a class="nav-link" href="{{ site.baseurl }}/"><i class="fa fa-book" aria-hidden="true"></i> Wiki</a>
       </li>
       <li>
-        <a class="nav-link" href="{{ site.baseurl }}/wiki"><i class="fa fa-book" aria-hidden="true"></i> Wiki</a>
+        <a class="nav-link" href="{{ site.baseurl }}/blog"><i class="fa fa-commenting-o" aria-hidden="true"></i> Blog</a>
       </li>
       <li>
         <a class="nav-link" href="{{ site.baseurl }}/about/mitmachen"><i class="fa fa-users" aria-hidden="true"></i> Mitmachen</a>
