--- a/_includes/wiki_nav.html
+++ b/_includes/wiki_nav.html
@@ -3,7 +3,7 @@
         <h4 class="card-title">Inhalt</h4>
         <p class="card-text">
         <ul>
-            <li><a href="/wiki">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="/wiki/tutorials.html">Anleitungen</a></li>
             <li><a href="/wiki/waehrungen.html">Währungen</a></li>
             <li><a href="/wiki/glossar.html">Glossar</a></li>
